mdapipkg/objects/Cvent_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Credit__c</fullName>
        <formula>Amount__c *(-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorization_Code__c</fullName>
        <label>Authorization Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Account_GL__c</fullName>
        <formula>IF(AND(Payment_Type_2__c = &quot;Credit Card&quot;, Registration_Currency_Mapping__c = &quot;USD&quot;), &quot;10 - Wells Fargo Credit Card USD&quot;, 
IF(AND(Payment_Type_2__c = &quot;Credit Card&quot;, Registration_Currency_Mapping__c = &quot;GBP&quot;), &quot;10 - Wells Fargo MCA GBP&quot;, 
IF(AND(Payment_Type_2__c = &quot;Credit Card&quot;, Registration_Currency_Mapping__c = &quot;EUR&quot;), &quot;10 - Wells Fargo London EUR&quot;, 
IF(AND(Payment_Type_2__c = &quot;Credit Card&quot;, Registration_Currency_Mapping__c = &quot;AUD&quot;), &quot;10 - Wells Fargo MCA AUD&quot;, 
IF(AND(Payment_Type_2__c = &quot;Credit Card&quot;, Registration_Currency_Mapping__c = &quot;CAD&quot;), &quot;10 - Wells Fargo MCA CAD&quot;, 
IF(AND(Payment_Type_2__c = &quot;CashCheck&quot;, Registration_Currency_Mapping__c = &quot;USD&quot;), &quot;10 - Wells Fargo Operating USD&quot;, 
IF(AND(Payment_Type_2__c = &quot;CashCheck&quot;, Registration_Currency_Mapping__c = &quot;GBP&quot;), &quot;10 - Wells Fargo MCA GBP&quot;, 
IF(AND(Payment_Type_2__c = &quot;CashCheck&quot;, Registration_Currency_Mapping__c = &quot;EUR&quot;), &quot;10 - Wells Fargo London EUR&quot;, 
IF(AND(Payment_Type_2__c = &quot;CashCheck&quot;, Registration_Currency_Mapping__c = &quot;AUD&quot;), &quot;10 - Wells Fargo MCA AUD&quot;, 
IF(AND(Payment_Type_2__c = &quot;CashCheck&quot;, Registration_Currency_Mapping__c = &quot;CAD&quot;), &quot;10 - Wells Fargo MCA CAD&quot;, 
IF(AND(Payment_Type_2__c = &quot;Bank Transfer&quot;, Registration_Currency_Mapping__c = &quot;USD&quot;), &quot;10 - Wells Fargo Dues Wire USD&quot;, 
IF(AND(Payment_Type_2__c = &quot;Bank Transfer&quot;, Registration_Currency_Mapping__c = &quot;GBP&quot;), &quot;10 - Wells Fargo MCA GBP&quot;, 
IF(AND(Payment_Type_2__c = &quot;Bank Transfer&quot;, Registration_Currency_Mapping__c = &quot;EUR&quot;), &quot;10 - Wells Fargo London EUR&quot;, 
IF(AND(Payment_Type_2__c = &quot;Bank Transfer&quot;, Registration_Currency_Mapping__c = &quot;AUD&quot;), &quot;10 - Wells Fargo MCA AUD&quot;, 
IF(AND(Payment_Type_2__c = &quot;Bank Transfer&quot;, Registration_Currency_Mapping__c = &quot;CAD&quot;), &quot;10 - Wells Fargo MCA CAD&quot;, 
IF(AND(Payment_Type_2__c = &quot;Credit Card&quot;, Registration_Currency_Mapping__c = &quot;GBP&quot;), &quot;10 - Wells Fargo MCA GBP&quot;, 
IF(AND(Payment_Type_2__c = &quot;Credit Card&quot;, Registration_Currency_Mapping__c = &quot;EUR&quot;), &quot;10 - Wells Fargo London EUR&quot;, 
IF(AND(Payment_Type_2__c = &quot;Credit Card&quot;, Registration_Currency_Mapping__c = &quot;AUD&quot;), &quot;10 - Wells Fargo MCA AUD&quot;, 
IF(AND(Payment_Type_2__c = &quot;Credit Card&quot;, Registration_Currency_Mapping__c = &quot;CAD&quot;), &quot;10 - Wells Fargo MCA CAD&quot;, 
IF(AND(Payment_Type_2__c = &quot;Payment Credits&quot;, 1=1 ), &quot;21 - Meeting Prepaid Liability&quot;, 

IF(AND(Payment_Type_2__c = &quot;Other&quot;, 1=1 ), &quot;13 - CVENT Payment Clearing Account&quot;, 

&quot;&quot;)))))))))))))))))))))</formula>
        <label>Bank Account GL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name_Text__c</fullName>
        <label>Bank Account Name Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Value__c</fullName>
        <formula>If ( Bank_Account_Name_Text__c = &quot;Other&quot;, &quot;&quot;, Bank_Account_Name_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Currency__c</fullName>
        <formula>Event__r.Budget_Currency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Cvent_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_Cvent_Refund_Trans_To_Journal__c</fullName>
        <formula>If ( Success__c = True &amp;&amp;  Transaction_Type_Name_Contains_Refund__c = True &amp;&amp;  Program_Format_Formula__c = True, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Cvent Transaction must have &quot;Success&quot; equal to True, &quot;Transaction Type&quot; equal OfflineRefund, and Program Format Formula must be True (not Chapter Event) in order to have a checked value. This allows a refund ClickLink to be processed.</inlineHelpText>
        <label>Convert Cvent Refund Trans To Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convert_Cvent_Trans_To_Staging_Cvent__c</fullName>
        <formula>If (Success__c = True &amp;&amp;  Transaction_Type_Name_Not_Refund__c = True &amp;&amp;  Program_Format_Formula__c = True, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Cvent Transaction must have &quot;Success&quot; equal to True, &quot;Transaction Type&quot; must not equal OfflineRefund, and Program Format Formula must be True (Not Chapter Event) in order to have a checked value. This allows a ClickLink to be processed.</inlineHelpText>
        <label>Convert Cvent Trans To Staging Cvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_To_Cvent_Refund_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted To Cvent Refund Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_To_Staging_Cvent_Trans_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted To Staging Cvent Trans Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Account_Mapping_Formula__c</fullName>
        <formula>If ( Passthrough_Formula__c = True, Pay_To_Chapter__c , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Account Mapping Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_General_Ledger_Account_Formula__c</fullName>
        <formula>If (Passthrough_Formula__c = True, &quot;20 - A/P General&quot;,Passthrough_Event_General_Ledger_Account__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit General Ledger Account Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Contact_Id__c</fullName>
        <label>Cvent Contact Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Event_Id__c</fullName>
        <label>Cvent Event Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Refund_Journal_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cvent Refund Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipName>Cvent_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cvent_Transaction_Id__c</fullName>
        <externalId>true</externalId>
        <label>Cvent Transaction Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>(Event__r.End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <label>Event Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <label>Event Title</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Cvent_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Ledger_Account_Line_Type__c</fullName>
        <formula>If ( Bank_Account_Name_Text__c = &quot;Other&quot;, &quot;General Ledger Account&quot;, &quot;Bank Account&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Ledger Account Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitee_Id__c</fullName>
        <label>Invitee Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Number_Stag_Cvent_Trans_Header__c</fullName>
        <formula>Staging_Cvent_Transaction_Detail_Record__r.Journal_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Journal Number (Stag Cvent Trans Header)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type_Formula__c</fullName>
        <formula>If (Passthrough_Formula__c = True, &quot;Account - Vendor&quot;, &quot;General Ledger Account&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By__c</fullName>
        <label>Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_On_Card__c</fullName>
        <label>Name On Card</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passthrough_Event_General_Ledger_Account__c</fullName>
        <formula>If (Passthrough_Formula__c = True, &quot;20 - A/P General&quot;, &quot;12 - A/R Events&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passthrough Event General Ledger Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passthrough_Formula__c</fullName>
        <formula>If (Passthrough__c = &quot;Yes&quot;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passthrough Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passthrough__c</fullName>
        <formula>TEXT(Event__r.Passthrough__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passthrough</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_To_Chapter__c</fullName>
        <formula>Event__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay To Chapter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type_2__c</fullName>
        <label>Payment Type 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Format_Formula__c</fullName>
        <formula>If (ISPICKVAL( Event__r.Program_Format__c, &quot;Chapter Event&quot;), False,
If (ISPICKVAL( Event__r.Program_Format__c, &quot;Member Owned Events&quot;), False, True))</formula>
        <inlineHelpText>This field returns a checked or True value if the Program Format field found on the Event linked to the Cvent Transaction does not contain a value of &quot;Chapter Event&quot;.</inlineHelpText>
        <label>Program Format Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Format__c</fullName>
        <formula>TEXT(Event__r.Program_Format__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Currency_Mapping__c</fullName>
        <formula>Event__r.Registration_Currency_Mapping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staging_Cvent_Transaction_Detail_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staging Cvent Transaction Detail Record</label>
        <referenceTo>Staging_Cvent_Transaction_Detail__c</referenceTo>
        <relationshipName>Cvent_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Date_Only__c</fullName>
        <formula>DATEVALUE( Transaction_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Date (Date Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Refund_Bank_Line_Type__c</fullName>
        <formula>If ( Bank_Account_Name_Text__c = &quot;Other&quot;, &quot;General Ledger Account&quot;, &quot;Bank Account&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Refund Bank Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type_Name_Contains_Refund__c</fullName>
        <formula>If (CONTAINS(&quot;OnlineRefund&quot;, Transaction_Type__c), True, 
If (CONTAINS(&quot;OfflineRefund&quot;, Transaction_Type__c), True, False))</formula>
        <label>Transaction Type Name Contains &quot;Refund&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Type_Name_Not_Refund__c</fullName>
        <formula>If (Transaction_Type_Name_Contains_Refund__c = True, False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type Name Not &quot;Refund&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Payment_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Payment Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Cvent Transaction_FFA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Event_Title__c</columns>
        <columns>First_Name__c</columns>
        <columns>Bank_Account_GL__c</columns>
        <columns>Bank_Account_Name_Text__c</columns>
        <columns>Bank_Account_Value__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Update_Payment_Detail__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cvent_Trans_EventEndDate_01_03_2018</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Event_Title__c</columns>
        <columns>First_Name__c</columns>
        <columns>Bank_Account_GL__c</columns>
        <columns>Bank_Account_Name_Text__c</columns>
        <columns>Bank_Account_Value__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Update_Payment_Detail__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2018</value>
        </filters>
        <label>Cvent Trans EventEndDate &gt;=01/03/2018</label>
    </listViews>
    <listViews>
        <fullName>Cvent_Trans_To_Staging_Details_March</fullName>
        <booleanFilter>1  AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Staging_Cvent_Transaction_Detail_Record__c</columns>
        <columns>Event__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Registration_Currency_Mapping__c</columns>
        <columns>Passthrough__c</columns>
        <columns>Budget_Currency__c</columns>
        <columns>Program_Format__c</columns>
        <columns>Program_Format_Formula__c</columns>
        <columns>Transaction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Converted_To_Staging_Cvent_Trans_Details__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Success__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Program_Format_Formula__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Transaction_Type_Name_Not_Refund__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cvent Trans To Staging Details - March</label>
    </listViews>
    <listViews>
        <fullName>Cvent_Transactions_To_Refunds</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Registration_Currency_Mapping__c</columns>
        <columns>Passthrough__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Type_Name_Contains_Refund__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Converted_To_Cvent_Refund_Journal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Transaction_Date_Date_Only__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2018</value>
        </filters>
        <filters>
            <field>Passthrough__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Registration_Currency_Mapping__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <filters>
            <field>Transaction_Date_Date_Only__c</field>
            <operation>lessOrEqual</operation>
            <value>4/10/2018</value>
        </filters>
        <label>Cvent Transactions To Refunds</label>
    </listViews>
    <listViews>
        <fullName>Cvent_Transactions_To_Staging_Details</fullName>
        <booleanFilter>1 AND (2 AND 3) AND 4 AND 5 AND 6 AND 7 AND 8 AND 9</booleanFilter>
        <columns>NAME</columns>
        <columns>Staging_Cvent_Transaction_Detail_Record__c</columns>
        <columns>Event__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Registration_Currency_Mapping__c</columns>
        <columns>Passthrough__c</columns>
        <columns>Budget_Currency__c</columns>
        <columns>Pay_To_Chapter__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transaction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Converted_To_Staging_Cvent_Trans_Details__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/4/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Transaction_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/10/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Success__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Transaction_Type_Name_Not_Refund__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Program_Format_Formula__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Convert_Cvent_Trans_To_Staging_Cvent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Registration_Currency_Mapping__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <filters>
            <field>Passthrough__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <label>Cvent Transactions To Staging Details</label>
    </listViews>
    <listViews>
        <fullName>Event_Title_Contains_Passthough</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Event_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>Event Title Contains Passthough</label>
    </listViews>
    <nameField>
        <label>Cvent Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cvent Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>